--- a/css/styles.css
+++ b/css/styles.css
@@ -2,9 +2,10 @@
 
 .topnav {
     position: relative;
-    height: 95px;
+    height: 100px;
     padding-top: 20px;
     padding-bottom: 20px;
+    margin-right: 20px;
 }
 .topnav a {
     float: left;
@@ -15,6 +16,7 @@
     font-size: 17px;
     font-family: 'Raleway', sans-serif;
     margin-top: 15px;
+    margin-bottom: 15px;
 
 }
 .topnav a:hover {
@@ -24,6 +26,22 @@
 .topnav a.split {
     float: right;
 }
+.promotion {
+  background-color: coral;
+  color: white;
+  padding: 5px;
+  margin-top: 30px;
+}
+.promotion p {
+  text-align: center;
+  padding-top: 10px;
+  text-transform: uppercase;
+  font-size: larger;
+}
+.promotion span {
+  font-weight: bolder;
+}
+
 /*END OF NAVIGATION*/
 
 /*LOGO - ALL PAGES*/
@@ -38,6 +56,106 @@
 }
 /*END OF LOGO*/
 
+/*FOOTER - ALL PAGES*/
+footer {
+  position:sticky;
+  bottom:0;
+  width: 100%;
+  background-color: coral;
+  color: white;
+  text-align: center;
+  padding: 5px;
+}
+footer .row {
+height: 100px;
+margin-top: 20px;
+margin-bottom: 20px;
+}
+footer h3 {
+  font-size: 17px;
+  font-family: 'Raleway', sans-serif;
+  font-weight: bolder;
+}
+.download {
+  max-width: 250px;
+  padding-top: 17px;
+}
+.social-list {
+  display: flex;
+  justify-content: center;
+  flex-wrap: nowrap;
+  list-style-type: none;
+  padding: 0;
+
+  @media screen and (max-width: $xs-tablet) {
+    margin-bottom: 0;
+  }
+}
+.social-list img {
+  padding: 5px;
+}
+footer p {
+  font-size: 13px;
+}
+/*END OF FOOTER*/
+
+/*HOME PAGE*/
+/*body .index {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}*/
+.menu {
+  text-align: center;
+}
+
+.menu h2 {
+  margin-bottom: 20px;
+  margin-top: 40px;
+    font-family: 'Raleway', sans-serif;
+    font-weight: bolder;
+}
+
+.menu a {
+color: coral;
+font-weight: bolder;
+text-decoration: none;
+}
+
+.menu .menu-img {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  margin-left: 40px;
+  margin-right: 30px;
+}
+.menu-img a {
+  height: 10px;
+}
+.mission {
+  margin-top:30px;
+  text-align: center;
+  background-color: #f5f5f5;
+  padding: 20px;
+}
+.mission h1 {
+  margin: 30px;
+    font-family: 'Raleway', sans-serif;
+    font-weight: bolder;
+}
+.mission p {
+  margin-left: 100px;
+  margin-right: 100px;
+  text-align: justify;
+  font-family: 'Raleway', sans-serif;
+  font-weight: 300px;
+}
+.newStuff, li {
+  margin-top:20px;
+  text-align: center;
+}
+/*END OF HOME PAGE*/
+
 /*SHOP PAGE*/
 header h1 {
     margin-top: 20px;
@@ -46,7 +164,6 @@ header h1 {
 }
 header h2 {
     font-family: 'Raleway', sans-serif;
-    margin-top: 50px;
 }
     
 .content {
@@ -58,23 +175,58 @@ header h2 {
   flex-wrap: wrap;
     height: 420px;
     width: 654px;
-    border-radius: 7px 7px 7px 7px;
-    /* VIA CSS MATIC https://goo.gl/cIbnS */
-    -webkit-box-shadow: 0px 14px 32px 0px rgba(0, 0, 0, 0.15);
-    -moz-box-shadow: 0px 14px 32px 0px rgba(0, 0, 0, 0.15);
-    box-shadow: 0px 14px 32px 0px rgba(0, 0, 0, 0.15);
+  }
+  .greenJuice .wrapper {
+    display: inline-flexbox;
+    justify-content: space-evenly;
   }
   .cucumberCelery {
     float: left;
+    border-radius: 7px 7px 7px 7px;
+    /* VIA CSS MATIC https://goo.gl/cIbnS */
+  -webkit-box-shadow: 0px 14px 32px 0px rgba(0, 0, 0, 0.15);
+  -moz-box-shadow: 0px 14px 32px 0px rgba(0, 0, 0, 0.15);
+  box-shadow: 0px 14px 32px 0px rgba(0, 0, 0, 0.15);
   }
   .spinachGinger {
     float: right;
+    border-radius: 7px 7px 7px 7px;
+    /* VIA CSS MATIC https://goo.gl/cIbnS */
+  -webkit-box-shadow: 0px 14px 32px 0px rgba(0, 0, 0, 0.15);
+  -moz-box-shadow: 0px 14px 32px 0px rgba(0, 0, 0, 0.15);
+  box-shadow: 0px 14px 32px 0px rgba(0, 0, 0, 0.15);
   }
   .strawberryKiwi {
     float: left;
+    border-radius: 7px 7px 7px 7px;
+    /* VIA CSS MATIC https://goo.gl/cIbnS */
+  -webkit-box-shadow: 0px 14px 32px 0px rgba(0, 0, 0, 0.15);
+  -moz-box-shadow: 0px 14px 32px 0px rgba(0, 0, 0, 0.15);
+  box-shadow: 0px 14px 32px 0px rgba(0, 0, 0, 0.15);
   }
   .mangoGinger {
     float: right;
+    border-radius: 7px 7px 7px 7px;
+    /* VIA CSS MATIC https://goo.gl/cIbnS */
+  -webkit-box-shadow: 0px 14px 32px 0px rgba(0, 0, 0, 0.15);
+  -moz-box-shadow: 0px 14px 32px 0px rgba(0, 0, 0, 0.15);
+  box-shadow: 0px 14px 32px 0px rgba(0, 0, 0, 0.15);
+  }
+  .caribbeanPassion {
+    float: left;
+    border-radius: 7px 7px 7px 7px;
+    /* VIA CSS MATIC https://goo.gl/cIbnS */
+  -webkit-box-shadow: 0px 14px 32px 0px rgba(0, 0, 0, 0.15);
+  -moz-box-shadow: 0px 14px 32px 0px rgba(0, 0, 0, 0.15);
+  box-shadow: 0px 14px 32px 0px rgba(0, 0, 0, 0.15);
+  }
+  .pineappleTwist {
+    float: right;
+    border-radius: 7px 7px 7px 7px;
+    /* VIA CSS MATIC https://goo.gl/cIbnS */
+  -webkit-box-shadow: 0px 14px 32px 0px rgba(0, 0, 0, 0.15);
+  -moz-box-shadow: 0px 14px 32px 0px rgba(0, 0, 0, 0.15);
+  box-shadow: 0px 14px 32px 0px rgba(0, 0, 0, 0.15);
   }
   .product-img {
     float: left;
@@ -130,6 +282,7 @@ header h2 {
     font-size: 15px;
     font-weight: lighter;
     overflow:visible;
+    text-transform: capitalize;
   }
   
   .product-price-btn {
@@ -157,35 +310,162 @@ header h2 {
   }
   
   .product-price-btn button:hover {
-    background-color: #79b0a1;
+    background-color: black;
+  }
+  .product-size {
+    display: block;
+    justify-content:space-evenly;
   }
   .product-size button {
-    height: 40px;
-    width: 90%;
-    margin-left: 15px;
+    height: 45px;
+    width: 45px;
+    margin-left: 38px;
     margin-bottom: 15px;
     box-sizing: border-box;
     border: transparent;
     border-radius: 60px;
     font-family: 'Raleway', sans-serif;
     font-size: 10px;
-    font-weight: 500;
+    font-weight:bolder;
     text-transform: uppercase;
     letter-spacing: 0.2em;
-    color: #ffffff;
-    background-color: lightgrey;
+    color: black;
+    border-style: solid;
+    border-color: coral;
+    background-color: white;
+  }
+  .buttonLabel {
+    font-weight: bold;
+  }
+  .product-size button:hover {
+  background-color: black;
+  border-color: black;
+  color: white;
   }
 /*END OF SHOP PAGE*/
 
 /*LOGIN FORM*/ 
 
   form {
-    margin-left: 100px;
+    margin-left: 500px;
+    margin-right:500px;
+    resize: none;
+    justify-content: center;
+    box-sizing: border-box;
   }
   .login {
-    border-style: solid;
-    border-color: black;
-    text-align: center;
-    font-weight: bolder;
+   text-align: center;
+    color: black;
+    font-family: 'Raleway', sans-serif;
+    font-weight:900;
+    margin-bottom: 45px;
+    margin-top: 50px;
+    text-transform: uppercase;
+    padding: 15px;
   }
+.existing {
+  text-align: center;
+  font-weight: 900;
+  margin-top: 10px;
+  margin-right: 100px;
+  margin-left: 100px;
+  padding: 12px;
+}
+.new {
+  text-align: center;
+  text-transform: uppercase;
+  font-weight: 900;
+  margin-top: 30px;
+  margin-right: 100px;
+  margin-left: 100px;
+  padding: 12px;
+}
 /*END OF LOGIN FORM*/
+
+/*REGISTRATION FORM*/
+.registration {
+  text-align: center;
+    color: black;
+    font-family: 'Raleway', sans-serif;
+    font-weight:900;
+    margin-bottom: 45px;
+    margin-top: 50px;
+    text-transform: uppercase;
+}
+form .newAccount {
+float: left;
+}
+/*END OF REGISTRATION*/
+
+/*CART PAGE*/
+.cartLayout {
+  margin: 50px;
+background-color: lightgray;  
+height: 420px;
+padding-top: 5px;
+}
+.cartItem {
+display: inline;
+justify-content: space-around;
+flex-wrap: wrap;
+justify-content: left;
+}
+.cartImage {
+  margin: 47px 38px;
+}
+
+.cartImage img {
+  float: left;
+  border-radius: 7px 0 0 7px;
+  height: 100px;
+  width: 130px;
+}
+.cartInfo {
+  margin: 47px 38px;
+  height: 100px;
+  width: 50%;
+  border-radius: 0 7px 10px 7px;
+  background-color: #ffffff;
+}
+.itemTitle {
+  margin-top: 5px;
+  height: 50px;
+}
+.itemTitle h2 {
+  margin: 47px 38px;
+  font-size: 13px;
+  padding-top: 20px;
+  padding-left: 100px;
+  font-family: 'Raleway', sans-serif;
+  font-weight: 600;
+  text-transform: uppercase;
+  color: black;
+  letter-spacing: 0.2em;
+}
+.cartProduct-size {
+  display: block;
+  justify-content:space-evenly;
+}
+.cartProduct-size button {
+  height: 45px;
+  width: 45px;
+  margin-left: 20px;
+  margin-bottom: 15px;
+  box-sizing: border-box;
+  border: transparent;
+  border-radius: 60px;
+  font-family: 'Raleway', sans-serif;
+  font-size: 10px;
+  font-weight:bolder;
+  text-transform: uppercase;
+  letter-spacing: 0.2em;
+  color: white;
+  background-color: coral;
+}
+.cartButtonLabel {
+  font-weight: bold;
+}
+.checkout {
+  background-color: white;
+}
+/*END OF CART PAGE*/
