--- a/css/styles.css
+++ b/css/styles.css
@@ -17,6 +17,7 @@
     font-family: 'Raleway', sans-serif;
     margin-top: 15px;
     margin-bottom: 15px;
+    font-weight: 500;
 
 }
 .topnav a:hover {
@@ -57,7 +58,7 @@
 /*END OF LOGO*/
 
 /*FOOTER - ALL PAGES*/
-footer {
+/*footer {
   position:sticky;
   bottom:0;
   width: 100%;
@@ -96,7 +97,7 @@ footer h3 {
 }
 footer p {
   font-size: 13px;
-}
+}*/
 /*END OF FOOTER*/
 
 /*HOME PAGE*/
@@ -160,6 +161,7 @@ margin-bottom: 20px;
   margin-left: 60px;
   margin-top: 40px;
 }
+
 .announcement {
   font-family: 'Raleway', sans-serif;
   max-width: 25%;
@@ -176,6 +178,9 @@ margin-bottom: 20px;
 }
 .fruitJuice img {
   max-height: 400px;
+}
+.fruitJuice img:hover {
+  opacity: 75%;
 }
 .newMenu {
   display: flex;
@@ -201,6 +206,9 @@ margin-bottom: 20px;
 .wellnessShots img {
   max-height: 400px;
 }
+.wellnessShots img:hover {
+  opacity: 75%;
+}
 .flavors li {
   padding-top: 10px;
   font-family: 'Raleway', sans-serif;
@@ -220,37 +228,6 @@ header h1 {
 header h2 {
     font-family: 'Raleway', sans-serif;
 }
- /*.content {
-  margin: 50px;
-  display: flex;
-  justify-content: space-evenly;
-  flex-wrap: wrap;
- }   
- .content li {
-  list-style: none;
-  font-family: 'Raleway', sans-serif;
-  font-size: 14px;
-  max-width: 375px;
- }
- .content h3 {
-padding-top: 12px;
-padding-left: 12px;
- } 
- .content p {
-  padding-left: 12px;
- }
- .greenJuice, .lemonade {
-  background-color: white;
-  border-style: solid;
-  border-color: #f5f5f5;
-}
-.greenJuice img, .lemonade img {
-  max-width: 375px;
-}
-.subtitle {
-  margin-left: 30px;
-  margin-top: 30px;
-}*/
 
 .content {
     margin: 50px;
@@ -430,10 +407,10 @@ padding-left: 12px;
   border-color: black;
   color: white;
   }
+  
 /*END OF SHOP PAGE*/
 
 /*LOGIN FORM*/ 
-
    .existingAcc, .newAccount {
     margin-left: 500px;
     margin-right:500px;
